# -_-

./: README.md
Application/: Application.sln  Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt  main.cpp
Application/Application/x64/Debug/: Application.exe.recipe  Application.ilk  vc143.idb
Application/Application/x64/Debug/Application.tlog/: Application.lastbuildstate  Application.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog
Application/Application/x64/Debug/qt/moc/: main.moc
Application/Application/x64/Debug/qt/qmake/: props.txt  qtvars.vcxproj  qtvars.xml
